--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@supabase/supabase-js": "1.33.3",
+    "@tailwindcss/postcss": "^4.1.13",
     "next": "15.5.4",
     "react": "19.1.1",
-    "react-dom": "19.1.1"
+    "react-dom": "19.1.1",
+    "react-query": "3.34.19",
+    "zustand": "3.7.1"
   },
   "devDependencies": {
     "@types/node": "24.6.1",
     "@types/react": "19.1.16",
     "@types/react-dom": "19.1.9",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.4",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.13",
     "typescript": "5.9.3"
   }
 }
