--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@heroicons/react": "^1.0.6",
     "@supabase/supabase-js": "1.33.3",
     "@tailwindcss/postcss": "^4.1.13",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "next": "15.5.4",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-query": "3.34.19",
     "zustand": "3.7.1"
   },
   "devDependencies": {
